--- a/web/index.html
+++ b/web/index.html
@@ -44,15 +44,15 @@
   <script>
     // Initialize Firebase
     const firebaseConfig = {
-      apiKey: "AIzaSyCTOGyAABOAUI0NnoClAcHOtuRB_THzgQE",
-      authDomain: "timer-45eb5.firebaseapp.com",
-      databaseURL: "https://timer-45eb5-default-rtdb.europe-west1.firebasedatabase.app",
-      projectId: "timer-45eb5",
-      storageBucket: "timer-45eb5.appspot.com",
-      messagingSenderId: "898156769425",
-      appId: "1:898156769425:web:40dfedda512e5067708f30",
-    };
-    firebase.initializeApp(firebaseConfig);
+    apiKey: "AIzaSyCTOGyAABOAUI0NnoClAcHOtuRB_THzgQE",
+    authDomain: "timer-45eb5.firebaseapp.com",
+    databaseURL: "https://timer-45eb5-default-rtdb.europe-west1.firebasedatabase.app",
+    projectId: "timer-45eb5",
+    storageBucket: "timer-45eb5.appspot.com",
+    messagingSenderId: "898156769425",
+    appId: "1:898156769425:web:40dfedda512e5067708f30",
+  };
+  const firebaseApp = firebase.initializeApp(firebaseConfig);
   </script>
   <script src="flutter.js" defer></script>
   <script>
