--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <!--
+	<head>
+		<!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
 
@@ -14,61 +14,62 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+		<base href="$FLUTTER_BASE_HREF" />
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+		<meta charset="UTF-8" />
+		<meta content="IE=Edge" http-equiv="X-UA-Compatible" />
+		<meta name="description" content="A new Flutter project." />
 
-  <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="timer_flutter">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+		<!-- iOS meta tags & icons -->
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+		<meta name="apple-mobile-web-app-title" content="timer_flutter" />
+		<link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+		<!-- Favicon -->
+		<link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>timer_flutter</title>
-  <link rel="manifest" href="manifest.json">
+		<title>timer_flutter</title>
+		<link rel="manifest" href="manifest.json" />
 
-  <script>
-    // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = null;
-  </script>
-  <!-- This script adds the flutter initialization JS code -->
-  <script src="https://www.gstatic.com/firebasejs/10.1.3/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.1.3/firebase-database.js"></script>
-  <script>
-    // Initialize Firebase
-    const firebaseConfig = {
-      apiKey: "AIzaSyCTOGyAABOAUI0NnoClAcHOtuRB_THzgQE",
-      authDomain: "timer-45eb5.firebaseapp.com",
-      databaseURL: "https://timer-45eb5-default-rtdb.europe-west1.firebasedatabase.app",
-      projectId: "timer-45eb5",
-      storageBucket: "timer-45eb5.appspot.com",
-      messagingSenderId: "898156769425",
-      appId: "1:898156769425:web:40dfedda512e5067708f30",
-    };
-    const firebaseApp = firebase.initializeApp(firebaseConfig);
-  </script>
-</head>
-<body>
-  <script src="flutter.js" defer></script>
-  <script>
-    window.addEventListener('load', function(ev) {
-      // Download main.dart.js
-      _flutter.loader.loadEntrypoint({
-        serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
-        },
-        onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine().then(function(appRunner) {
-            appRunner.runApp();
-          });
-        }
-      });
-    });
-  </script>
-</body>
+		<script>
+			// The value below is injected by flutter build, do not touch.
+			const serviceWorkerVersion = null;
+		</script>
+		<!-- This script adds the flutter initialization JS code -->
+		<script src="https://www.gstatic.com/firebasejs/10.1.3/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/10.1.3/firebase-database.js"></script>
+		<script>
+			// Initialize Firebase
+			const firebaseConfig = {
+				apiKey: "AIzaSyCTOGyAABOAUI0NnoClAcHOtuRB_THzgQE",
+				authDomain: "timer-45eb5.firebaseapp.com",
+				databaseURL:
+					"https://timer-45eb5-default-rtdb.europe-west1.firebasedatabase.app",
+				projectId: "timer-45eb5",
+				storageBucket: "timer-45eb5.appspot.com",
+				messagingSenderId: "898156769425",
+				appId: "1:898156769425:web:40dfedda512e5067708f30",
+			};
+			const firebaseApp = firebase.initializeApp(firebaseConfig);
+		</script>
+	</head>
+	<body>
+		<script src="flutter.js" defer></script>
+		<script>
+			window.addEventListener("load", function (ev) {
+				// Download main.dart.js
+				_flutter.loader.loadEntrypoint({
+					serviceWorker: {
+						serviceWorkerVersion: serviceWorkerVersion,
+					},
+					onEntrypointLoaded: function (engineInitializer) {
+						engineInitializer.initializeEngine().then(function (appRunner) {
+							appRunner.runApp();
+						});
+					},
+				});
+			});
+		</script>
+	</body>
 </html>
