--- a/web/index.html
+++ b/web/index.html
@@ -42,6 +42,8 @@
 		<script type="text/javascript">
 			window.flutterWebRenderer = "html";
 		</script>
+		<script src="https://www.gstatic.com/firebasejs/10.1.3/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/10.1.3/firebase-database.js"></script>		
 	</head>
 	<body>
 		<script>
